Tue May 25 14:06:06 1999  Jeffrey A Law  (law@cygnus.com)

	* output.h (STRIP_NAME_ENCODING): Provide default definition.
	* dwarf2out.c (ASM_NAME_TO_STRING): Use STRIP_NAME_ENCODING.

	* flow.c (mark_set_1): Do not record BLKmode stores as dead
	store elimination candidates.

Tue May 25 08:55:57 1999  Gavin Romig-Koch  <gavin@cygnus.com>

	* config/mips/mips.h (ASM_OUTPUT_DOUBLE_INT) : Use 'dword' if 
	TARGET_GAS.

Mon May 24 20:30:08 1999  Jim Wilson  <wilson@cygnus.com>

	* configure.in (rs6000-ibm-aix4.[12]*): Delete use of aix41-gld.h.
	Add use of x-aix41-gld.
	
Mon May 24 16:44:09 1999  Jakub Jelinek  <jj@ultra.linux.cz>

	* sparc/linux64.h (ASM_OUTPUT_CONSTRUCTOR): Define.
	(ASM_OUTPUT_DESTRUCTOR): Define.

Mon May 24 14:35:24 1999  Jeffrey A Law  (law@cygnus.com)

	* loop.c (strength_reduce): Do not clear NOT_EVERY_ITERATION at the
	last CODE_LABEL in a loop if we have previously passed a jump
	to the top of the loop.

Mon May 24 07:56:29 1999  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.h (OUTPUT_INT_ADDR_CONST): Fix blunder made when
	applying Philip's patch.

Mon May 24 01:02:12 1999  Mark Mitchell  <mark@codesourcery.com>

	* stmt.c (expand_end_bindings): Ignore any elements of VARS that
	are not VAR_DECLs.

Sun May 23 20:31:16 1999  Jeffrey A Law  (law@cygnus.com)

        * loop.c (strength_reduce): Grow reg_single_usage as needed.

Sun May 23 10:13:20 1999  David O'Brien <obrien@FreeBSD.org>

	* i386/freebsd-elf.h (LINK_SPEC): Change -static to -Bstatic.
	Also remove a useless comment.

Sun May 23 10:05:23 1999  Jerry Quinn <jquinn@nortelnetworks.com>

	* pa.md (negdf2,negsf2):  Use fneg instead of fsub on pa 2.0.
 
Sat May 22 21:02:06 1999  David Edelsohn  <edelsohn@gnu.org>

	* collect2.c (main): Only generate import or export file and add
	to link arguments if non-empty.  Use xmalloc not alloca.
	(write_{export,import}_file): Delete.
	(write_aix_file): New function.
	(locatelib): Use xmalloc not malloc.