@@ -483,6 +483,21 @@ extern int arm_is_6_or_7;
 #ifndef NEED_PLT_GOT
 #define NEED_PLT_GOT	0
 #endif
+
+/* Nonzero if we need to refer to the GOT with a PC-relative
+   offset.  In other words, generate
+
+   .word	_GLOBAL_OFFSET_TABLE_ - [. - (.Lxx + 8)]  
+
+   rather than
+
+   .word	_GLOBAL_OFFSET_TABLE_ - (.Lxx + 8)
+
+   The default is true, which matches NetBSD.  Subtargets can 
+   override this if required.  */
+#ifndef GOT_PCREL
+#define GOT_PCREL   1
+#endif
 
 /* Target machine storage Layout.  */
 
